# ORIANMed

./: .gitignore  pyproject.toml  render.yml  requirements.txt
backend/: database.py  knowledge.py  main.py  models.py  seed_knowledge.py
data/: who_guidelines.json
frontend/templates/: index.html
